...
    </View>
  ) : null;

  return (
    <View
      style={[styles.container, { marginTop: headerHeight }]}
      testID="HomeScreenContainer"
    >
      <StatusBar
        barStyle="dark-content"
        backgroundColor="#fff"
        animated={true}
      />
...
          </View>
        </View>
      </View>

      <View style={styles.countsContainer}>
        <TouchableOpacity
          testID="connectionsBtn"
          style={styles.countsCard}
          onPress={() => {
            dispatch(setActiveNotification(null));
            navigation.navigate('Connections');
          }}
        >
...
          <View style={styles.countsBorder} />
          <Text style={styles.countsDescriptionText}>
            {t('home.button.achievements')}
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          testID="appsBtn"
          style={styles.countsCard}
          onPress={() => {
            dispatch(setActiveNotification(null));
            navigation.navigate('Apps', {
              baseUrl: undefined,
              appId: undefined,
...
              navigation.navigate('MyCode');
            }}
            accessible={true}
            accessibilityLabel={t('home.accessibilityLabel.connect')}
          >
            <MaterialDesignIcons
              name="qrcode"
              color={BLACK}
              size={DEVICE_LARGE ? 25 : 20}
            />
            <Text style={styles.connectText}>{t('home.button.myCode')}</Text>
          </TouchableOpacity>
          <TouchableOpacity
...
