...
    photo?.filename && !imgErr
      ? {
          uri: `file://${photoDirectory()}/${photo?.filename}`,
        }
      : require('@/static/default_profile.jpg');

  const memberTestID = memberIsAdmin ? 'admin' : 'regular';
  return (
    <View testID={memberTestID}>
      <View style={styles.container} testID={testID}>
        <TouchableOpacity
          onPress={() => {
            navigation.navigate('FullScreenPhoto', { photo });
...
              })}
            </Text>
          )}
        </View>
        {contextActions.length > 0 && (
          <TouchableOpacity
            testID="memberContextBtn"
            style={styles.moreIcon}
            onPress={handleActionSheet}
          >
            <Material
              name="dots-vertical"
              size={ICON_SIZE}
...
