...
  const handleModalRequestClose = () => {
    setModalVisible(!modalVisible);
  };

  return (
    <>
      <SafeAreaView style={styles.container} testID="OnboardScreen">
        <StatusBar
          barStyle="dark-content"
          backgroundColor={GRAY1}
          animated={true}
        />

...
            </TouchableOpacity>
            <View style={styles.space} />
            <TouchableOpacity
              style={styles.recoverBtn}
              onPress={handleImport}
              accessibilityLabel={t('onboarding.button.import')}
              testID="importBrightID"
            >
              <Text style={styles.recoverBtnText}>
                {t('onboarding.button.import')}
              </Text>
            </TouchableOpacity>
          </View>
...
